--- a/DebonairDev/Views/Home/Index.cshtml
+++ b/DebonairDev/Views/Home/Index.cshtml
@@ -1,3 +1,13 @@
-﻿<div>
-	<h1>This site is under construction...</h1>
+﻿@{
+    ViewBag.Title = "Home";
+}
+
+<div class="carousel slide" data-ride="carousel" id="featured">
+    <ol class="carousel-indicators"></ol>
+    <div class="carousel-inner fullHeight">
+        <div class="item"><img src="~/Assets/images/workstation.jpg" /></div>
+    </div>
+
+    <a href="#featured" class="left carousel-control" role="button" data-slide="prev"><span class="glyphicon glyphicon-chevron-left"></span></a>
+    <a href="#featured" class="right carousel-control" role="button" data-slide="next"><span class="glyphicon glyphicon-chevron-right"></span></a>
 </div>
