Clean up header and make it more mobile friendly. Clean up copy/pasta scripts

--- a/DebonairDev/Views/Home/Index.cshtml
+++ b/DebonairDev/Views/Home/Index.cshtml
@@ -3,11 +3,7 @@
 }
 
 <div class="carousel slide" data-ride="carousel" id="featured">
-    <ol class="carousel-indicators"></ol>
     <div class="carousel-inner fullHeight">
-        <div class="item"><img src="~/Assets/images/workstation.jpg" /></div>
+        <div class="item active"><img src="~/Assets/images/workstation.jpg" /></div>
     </div>
-
-    <a href="#featured" class="left carousel-control" role="button" data-slide="prev"><span class="glyphicon glyphicon-chevron-left"></span></a>
-    <a href="#featured" class="right carousel-control" role="button" data-slide="next"><span class="glyphicon glyphicon-chevron-right"></span></a>
 </div>
