--- a/DebonairDev/Views/Shared/SiteLayout.cshtml
+++ b/DebonairDev/Views/Shared/SiteLayout.cshtml
@@ -35,14 +35,15 @@
                     <div>
                         <img src="~/Assets/images/DebonairLogo.png" alt="Debonair Software Development" class="logo" />
                         <div class="logo-brandname">
-                            <div>Debonair Software Development</div>
+                            <div>Debonair</div> 
+                            <div>Software Development</div>
                         </div>
                     </div>
                 </a>
 
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse" id="mainNav">
-                    <ul class="nav navbar-nav navbar-left" role="menu">
+                    <ul class="nav navbar-nav navbar-right" role="menu">
                         <li><a href="@ViewBag.BaseUrl#portfolio">Portfolio</a></li>
                         <li><a href="@ViewBag.BaseUrl#skills">Skills</a></li>
                         <li><a href="@ViewBag.BaseUrl#services">Services</a></li>
