--- a/DebonairDev/Assets/styles/custom.css
+++ b/DebonairDev/Assets/styles/custom.css
@@ -10,16 +10,21 @@ body {
     font-weight: 300;
     font-size: 2em;
     position: relative;
-    color: #000523;
-    margin-top: 70px;
+    color: #000;
+    margin-top: 60px;
 }
 
 header{
 }
 
 .logo-brandname {
+    font-weight: 600;
     float: right;
     margin-top: 13px;
+}
+
+.logo-brandname div{
+    display: inline;
 }
 
 header .logo{
@@ -50,4 +55,28 @@ nav{
     width: 100%;
     height: 100%;
     opacity: 0.85;
+}
+
+.navbar-default .navbar-brand{
+    color: #000;
+}
+
+@media only screen
+and (max-width: 768px) {
+    header .logo-brandname{
+        font-size: small;
+        font-weight: 500;
+        margin-top: 0px;
+    }
+    
+    .navbar-default .navbar-nav > li > a{
+        color: #000;
+    }
+
+    .logo-brandname div{
+        display: block;
+    }
+    header .navbar-nav{
+        background-color: rgba(255, 255, 255, .8);
+    }
 }
