--- a/DebonairDev/Views/Home/Index.cshtml
+++ b/DebonairDev/Views/Home/Index.cshtml
@@ -2,8 +2,12 @@
     ViewBag.Title = "Home";
 }
 
-<div class="carousel slide" data-ride="carousel" id="featured">
-    <div class="carousel-inner fullHeight">
-        <div class="item active"><img src="~/Assets/images/workstation.jpg" /></div>
+<div class="hero">
+    <div class="wrapper">
+        <div class="preamble">
+            <div class="hdg hdg_upper">stylish.</div>
+            <div class="hdg hdg_upper preamble-sub1">charming.</div>
+            <div class="hdg hdg_upper preamble-sub2">confident.</div>
+        </div>
     </div>
 </div>
