--- a/DebonairDev/Views/Shared/SiteLayout.cshtml
+++ b/DebonairDev/Views/Shared/SiteLayout.cshtml
@@ -33,10 +33,10 @@
             <div class="container-fluid">
                 <a class="navbar-brand" href="@Url.Action("Index", "Home")">
                     <div>
-                        <img src="~/Assets/images/DebonairLogo.png" alt="Debonair Software Development" class="logo" />
+                        <img src="~/Assets/images/DebonairLogoWhite.png" alt="Debonair Software Development" class="logo" />
                         <div class="logo-brandname">
-                            <div>Debonair</div> 
-                            <div>Software Development</div>
+                            @*<div>Debonair</div>*@ 
+                            @*<div class="hidden-xs">Software Development</div>*@
                         </div>
                     </div>
                 </a>
